Fix collapse

--- a/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs-static/_bloc-product-search.scss
+++ b/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs-static/_bloc-product-search.scss
@@ -66,7 +66,7 @@
     .menu-item-container {
       @include flexbox();
       @include flex-wrap(wrap);
-      margin: 10px 0;
+      margin: 10px 0 100px;
       padding-bottom: 30px;
       border-bottom:1px solid #8295a0;
     }
